[package]
name = "solana-cli-explorer"
edition = "2021"
version = "0.1.0"
authors = ["Cavey Cool <caveycool@gmail.com>"]
repository = "https://github.com/cavemanloverboy/sol"
description = "A command line explorer for the Solana Blockchain."
license = "MIT OR Apache-2.0"
keywords = ["cli", "crypto", "blockchain", "utility", "rpc"]
categories = ["command-line-utilities"]

[[bin]]
name = "sol"
path = "src/main.rs"

[dependencies]
base64 = "0.22.0"
bs58 = "0.5.1"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
fd_bs58 = "0.1.0"
mpl-token-metadata = "4.1.2"
num-format = "0.4.4"
prettytable-rs = "0.10.0"
solana-account-decoder = "1.18.8"
solana-client = "1.18.8"
solana-sdk = "1.18.8"
solana-transaction-status = "1.18.8"
spl-token = "4.0.0"
spl-token-2022 = "2.0.0"
spl-token-metadata-interface = "0.2.0"
spl-type-length-value = "0.3.1"
terminal_size = "0.3.0"
tokio = { version = "1.33.0", features = ["time", "rt", "macros"] }
